--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,11 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+@source '../../node_modules/@heroui/theme/dist';
+@plugin './hero.ts';
+@custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #f9f9f9;
+  --background: #171717;
 }
 
 @theme inline {
@@ -14,8 +17,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #0a0a0a;
+    --background: #f9f9f9;
   }
 }
 
